Provide additional simple tests
Signed-off-by: Martin Bartoš <mabartos@redhat.com>